Fix user access level boundaries when users list do not overflow.

--- a/app/ui/src/Pages/Users/components/UserList/UserList.module.scss
+++ b/app/ui/src/Pages/Users/components/UserList/UserList.module.scss
@@ -4,6 +4,7 @@
 
 .container {
   overflow: auto;
+  height: 100%;
 }
 
 .table {
